@@ -64,7 +64,7 @@ Skeletons are probably seen by infravision.
 //Highscore of no entries doesn't work properly.
 //Carnivorous plants inside walls!
 //Scroll of charging ("no items to charge")
-(s) Alpha + rotate doesn't work.
+//Alpha + rotate doesn't work.
 //Beartraps + groinless creatures.
 //Zapping is possible without arms.
 //Hit effects of flying items.
@@ -103,7 +103,7 @@ Skeletons are probably seen by infravision.
 //You can change a sword to water with a scroll of change material. (maybe the whole sword could just vanish. Maybe add a bit fluid on the square the player is standing on)
   (doesn't exists and hasn't; changing only works in WMode)
 //Teleportation state works in the wilderness.
-Golden plate mails are worth less than iron ones.
+//Golden plate mails are worth less than iron ones.
 //The imperialist makes no reaction if the player destroys his golden room completely with pick-axe etc.
 //When walking towards locked door there's a bad message: "The closed, locked stone door with triangular lock is locked"
 //Skulls are insanely heavy (8 kg).
@@ -112,7 +112,7 @@ Golden plate mails are worth less than iron ones.
 //The dead are counted when calculating population.
 //"The kamikaze dwarf manages to free heself from the bear trap."
 //Pet plants are able to follow the player to the world map.
-(s) It is impossible to polymorph into a kamikaze dwarf, the game just says "Be more precise" since there are many configurations with same name. (low priority)
+//It is impossible to polymorph into a kamikaze dwarf, the game just says "Be more precise" since there are many configurations with same name. (low priority)
 //"0 scrolls of wishing dropped."
 //Destroying shops, libraries, smithies and temples (except the cathedral) with a pick-axe yields no penalties.
 (s) Trying to polymorph into a valpurium golem (which is prohibited) gives a wrong message.
@@ -129,23 +129,23 @@ It seems that due to certain bitshift rounding errors, resting causes more exp m
 //Items left on shop floor do not spoil even if the shopkeeper is dead.
 //"A wolf looks much healthier" (weird bug, can't really trace how this happened, but it did)
 //Wand of locking doesn't update memorized description correctly.
-(s) The three letter player name minimum can be avoided by adding extra spaces which will eventually be discarded.
+//The three letter player name minimum can be avoided by adding extra spaces which will eventually be discarded.
 //You can fill a potion with ice.
 //The bad pray effect of Sophos can sometimes leave the player in a state where he has more than max HPs.
 //Hitting imperialists palm waving slaves causes no real action on the behalf of the imperialist.
-(s) Putting mines in Attnam is considered OK by guards.
+/Putting mines in Attnam is considered OK by guards.
 //Amulet of Life saving generates high score entry.
-Offering chests in prohibited. (They are too important according to the game)
+//Offering chests in prohibited. (They are too important according to the game)
 Skeletons can be poisoned.
 //Spiders can lock doors.
 If multiple chests are stacked, only the top one can be opened with key.
 Odd monsters seem to be able to apply.
-Dipping to corpses doesn't work.
+//Dipping to corpses doesn't work.
 (this may not be a bug, but it is a problem) Go and heal commands might be too fast on a very fast machine (> 1 GHz or something like that)
 Does using a two-handed weapon yield exp to only one arm?
-Guards in the library.
+//Guards in the library.
 //(example) Even though the golem is not seen the message "The attack of the glass golem interrupts you." is displayed
-(might be a feature... But probably isn't even thought Timo may say so) Merka the shopkeeper walking around in the dungeon. 
+//(might be a feature... But probably isn't even thought Timo may say so) Merka the shopkeeper walking around in the dungeon. 
 //Dark wizards are too hard.
 //TOO MANY KAMIKAZE DWARFS.
 "XXXX, killed by a werewolf polymorphed into a werewolf"
